gallery and eucation background change

--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -17,121 +17,142 @@ body {
         margin: 0;
         padding: 0;
     }
-    #hexGrid {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      margin: 0 auto;
-      overflow: hidden;
-      font-family: 'Raleway', sans-serif;
-      font-size: 15px;
-      list-style-type: none;
-    }
-    
-    .hex {
-      position: relative;
-      visibility:hidden;
-      outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
-    }
-    .hex::after{
-      content:'';
-      display:block;
-      padding-bottom: 86.602%;  /* =  100 / tan(60) * 1.5 */
-    }
-    .hexIn{
-      position: absolute;
-      width: 98%;
-      padding-bottom: 113.851%;
-      margin: 0 0%;
-      overflow: hidden;
-      visibility: hidden;
-      outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
-      -webkit-transform: rotate3d(0,0,1,-60deg) skewY(30deg);
-          -ms-transform: rotate3d(0,0,1,-60deg) skewY(30deg);
-              transform: rotate3d(0,0,1,-60deg) skewY(30deg);
-    }
-    .hexIn * {
-      position: absolute;
-      visibility: visible;
-      outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
-    }
-    
-    .hexLink {
-        display:block;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        color: #fff;
-        overflow: hidden;
-        cursor: pointer;
-        -webkit-transform: skewY(-30deg) rotate3d(0,0,1,60deg);
-            -ms-transform: skewY(-30deg) rotate3d(0,0,1,60deg);
-                transform: skewY(-30deg) rotate3d(0,0,1,60deg);
-    }
-    
-    /*** HEX CONTENT **********************************************************************/
-    .hex img {
-      left: -100%;
-      right: -100%;
-      width: auto;
-      height: 100%;
-      margin: 0 auto;
-      -webkit-transform: rotate3d(0,0,0,0deg);
-          -ms-transform: rotate3d(0,0,0,0deg);
-              transform: rotate3d(0,0,0,0deg);
-    }
-    
-    .hexIn h2, .hexIn div {
-      width: 100%;
-      padding: 5%;
-      background-color: rgba(#00416A, 0.8);
-      box-sizing:border-box;
-      font-weight: 300;
-      -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
-              transition:          transform .2s ease-out, opacity .3s ease-out;
-    }
-    .hexIn h2 {
-      bottom: 50%;
-      padding-top:50%;
-      font: normal 1.5em/1 "Josefin Sans", Helvetica, sans-serif;
-      z-index: 1;
-      -webkit-transform:translate3d(0,-100%,0);
-          -ms-transform:translate3d(0,-100%,0);
-              transform:translate3d(0,-100%,0);
-    }
-    .hexIn h2::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 45%;
-      width: 10%;
-      text-align: center;
-      border-bottom: 1px solid #fff;
-    }
-    .hexIn div {
-        top: 50%;
-        padding-bottom:50%;
-        -webkit-transform:translate3d(0,100%,0);
-            -ms-transform:translate3d(0,100%,0);
-                transform:translate3d(0,100%,0);
-    }
-    .hexLink:not(.content) div {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis
-    }   
-        
-    /*** HOVER EFFECT  **********************************************************************/
-    .hexLink {
-        &.hex_modal-trigger {
-            &:hover, &:focus, &:active, &.active {
-                h2, div {
-                    -webkit-transform:translate3d(0,0,0);
-                        -ms-transform:translate3d(0,0,0);
-                            transform:translate3d(0,0,0);
-                  } 
+    .hexIn {
+        margin: 2px;
+        .hexLink {
+            display:block;
+            text-align: center;
+            overflow: hidden;
+            position: relative;
+            cursor: pointer;
+            img {
+                display: block;
+            }
+            h2, div {
+                position: absolute;
+                width: 100%;
+                padding: 5%;
+                box-sizing:border-box;
+                font-weight: 300;
+                -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
+                        transition:          transform .2s ease-out, opacity .3s ease-out;
+              }
+              h2 {
+                bottom: 50%;
+                padding-top:50%;
+                font: normal 1.5em/1 "Josefin Sans", Helvetica, sans-serif;
+                z-index: 1;
+                -webkit-transform:translate3d(0,-100%,0);
+                    -ms-transform:translate3d(0,-100%,0);
+                        transform:translate3d(0,-100%,0);
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 45%;
+                    width: 10%;
+                    text-align: center;
+                    border-bottom: 1px solid #fff;
+                }
+              }
+              div {
+                top: 50%;
+                padding-bottom:50%;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                -webkit-transform:translate3d(0,100%,0);
+                    -ms-transform:translate3d(0,100%,0);
+                        transform:translate3d(0,100%,0);
+            }
+            /*** HOVER EFFECT  **********************************************************************/
+            &.hex_modal-trigger {
+                &:hover, &:focus, &:active, &.active {
+                    h2, div {
+                        -webkit-transform:translate3d(0,0,0);
+                            -ms-transform:translate3d(0,0,0);
+                                transform:translate3d(0,0,0);
+                    } 
+                }
             }
         }
+    }
+    // SlideShow
+    /* Slideshow container */
+    .slideshow-container {
+        display: none;
+        max-width: 1000px;
+        overflow: hidden;
+        position: relative;
+        margin: auto;
+        .slides {
+            display: none;
+            img {
+                display:block;
+                width: 100%;
+                height: 500px;
+                object-fit: cover;
+            }
+            .slide_text {
+                font-size: 2.5rem!important;
+                color: #f2f2f2;
+                font-size: 15px;
+                padding: 8px 12px;
+                position: absolute;
+                bottom: 8px;
+                width: 100%;
+                text-align: center;
+                z-index: 1;
+            }
+            &.fade {
+                animation-name: fade;
+                animation-duration: 1.5s;
+            }
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                transition: height .6s;
+                
+            }
+            &:hover {
+                &:after {
+                    height: 0;
+                    
+                }
+            }
+            .slide_link {
+                display: block;
+                cursor: pointer;
+            }
+        }
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            margin-top: -22px;
+            padding: 16px;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+            &:hover {
+                background-color: rgba(0,0,0,0.8);
+            }
+        }
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+    }
+    @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
     }
 }
 
@@ -141,83 +162,17 @@ body {
         display: none;
     }
 }
-    
-/*** HEXAGON SIZING AND EVEN ROW INDENTATION *****************************************************************/
-#hexGrid { /* <- hexagons per row and hex width calcul variables */
-    --item_on_row_1: 4;
-    --item_on_row_2: 3;
-    --width: calc(100/var(--item_on_row_1));
-    
-    padding-bottom: 7.4%;
-    .hex {
-        width: calc(var(--width) * 1%); 
-    }
-}
-
-@media (min-width:1201px) { /* <- 4-5  hexagons per row */
-    #hexGrid {
-
-        .hex:nth-child(7n+5) { 
-            margin-left:calc(var(--width)/2 * 1%);  
-        }
-    }
-}
-
-@media (max-width: 1200px) and (min-width:901px) { /* <- 3-4  hexagons per row */
-    #hexGrid{
-        .hex:nth-child(7n+5){ 
-            margin-left:calc(var(--width)/2 * 1%);  
-        }
-    }
-}
-
-@media (max-width: 900px) and (min-width:601px) { /* <- 2-3  hexagons per row */
-    #hexGrid{
-        --item_on_row_1: 3;
-        --item_on_row_2: 2;
-
-        padding-bottom: 7.4%;
-
-        .hex:nth-child(5n+4){ 
-            margin-left:calc(var(--width)/2 * 1%);  
-        }
-    }
-  }
-
-@media (max-width: 600px) and (min-width: 501px) { /* <- 2-1  hexagons per row */
-    #hexGrid {
-        --item_on_row_1: 2;
-        --item_on_row_2: 1;
-
-        padding-bottom: 11.2%;
-
-        .hex:nth-child(3n+3){ 
-            margin-left:calc(var(--width)/2 * 1%);  
-        }
-    }
-}
 
 // Global Grid media queries
 @media screen and (max-width: 900px) {
     body {
-        .body {
-            .gallery {
-                --s: 120px; 
-                --g: 10px;  
-            }
-        }
+        // 
     }
 }
 @media screen and (max-width: 675px) {
     body {
-        .body {
-            .gallery {
-                --s: 100px; 
-            }
-        }
         .c-row {
             flex-direction: column;
         }
     }
 }
-
