--- a/templates/blocks/contact/_form.html.twig
+++ b/templates/blocks/contact/_form.html.twig
@@ -1,6 +1,7 @@
 {{ form_start(form, {
     'attr': {
         'id': 'contact_form',
+        'novalidate': 'novalidate'
     }
 }) }}
     <div class="row">
