--- a/assets/styles/front/_media-queries.scss
+++ b/assets/styles/front/_media-queries.scss
@@ -26,12 +26,6 @@
         header .hide-on-small-only, #contact .hide-on-small-only, .hide-on-small-and-down {
             display: none !important;
         }
-        .timeline2 ul li div.card-panel.inside {
-        width: 250px;
-        }
-        .timeline2 ul li:nth-child(even) div.card-panel.inside {
-        left: -289px;
-        }
     }
     .switch#togMobileButton {
         top: 27px;
@@ -41,12 +35,12 @@
         font-size: 30px;
         transition: all .5s;
         &:hover {
-            background-color: $secondary-color !important;
+            background-color: var(--accent-color) !important;
         }
     }
     .sidenav li > a.grey-text.text-lighten-1:not(a.sidenav-close) {
         &:hover {
-            color: #fff !important;
+            color: var(--secondary-theme) !important;
         }
     }
 }
@@ -77,7 +71,6 @@
             font-size: 20px;
         }
         #competences {
-            padding: 6rem 0 0 0;
             .container {
                 width: 98%;
             }
@@ -87,9 +80,6 @@
         }
         .caption {
             padding-top: 66px;
-        }
-        .section {
-            padding: 50px 10px;
         }
         .logo {
             left: 50%;
@@ -194,10 +184,7 @@
         }
         .section {
             &#contact {
-                padding: 50px 0;
-                .container {
-                    padding: 24px 0;
-                }
+                padding: 4rem 0 2rem 0;
             }
             &#aPropos {
                 padding: 0 0;
@@ -268,11 +255,6 @@
                 width: 90%;
                 padding-bottom: 103.851%;
                 margin: 0 7%;
-            }
-        }
-        #portfolio {
-            .container {
-                padding: 24px 5px;
             }
         }
         #hexGrid {
