--- a/templates/blocks/_presentation.html.twig
+++ b/templates/blocks/_presentation.html.twig
@@ -1,7 +1,21 @@
 {% if presentation|default %}
 
-    <div class="text grey-text text-darken-4">
-        {{ presentation.textBlock|raw }}
+    <div id="caption-border" class="caption js-about">
+        <div class="box-caption ">
+            <div class="text-caption center-align">
+                <h1><span class="name grey-text text-lighten-1"><a class="al" href="{{path('admin')}}">C</a>harlotte Saidi</span>
+                <span class="sep"></span>
+                <span class="job light grey-text">Développeuse Web Junior</span></h1>
+            </div>
+
+            <div id="aPropos" class="section scrollspy">
+                <div class="container">
+                    <div class="text">
+                        {{ presentation.textBlock|raw }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 {% endif %}
